refactor(core): 统一返回对象并重构用户管理相关代码
- 将原ResponseData封装类重命名并重构为R类，统一响应结果格式
- 替换用户模块及资源相关代码中ResponseData为R，提高代码一致性和可维护性
- 调整用户控制器代码，简化校验逻辑，优化用户新增、更新和删除接口
- 移除重复校验代码，改用服务层统一校验和Exception机制
- 新增身份证和手机号校验注解及实现，提高数据合法性校验力度
- 增加ShieldUtil新增方法getUserIdThrow，方便获取登录用户ID
- 调整异常枚举JpowerError，增强枚举属性和注解支持
- 调整JpowerException类，优化序列化字段声明和异常信息存储
- 迁移验证分组AddGroup和UpdateGroup至公共模块，统一验证配置
- 新增业务错误提示常量ServiceCodeConstants，规范错误信息管理
- 优化用户管理的接口注解、参数校验和返回结果结构
- 移除过时类ResponseData，简化代码，消除冗余
- 更新用户控制器增加swagger3注解和请求参数校验注解
- 修改踢线、查询在线用户和登录用户信息等接口返回形式
- 统一断言异常消息关键字，使用业务错误提示常量管理